[risk=low][RW-14370] Minor cron improvements (#9133)
* genericize and improve logs
* rename groupAndPushSynchronizeAccessTasks to synchronizeUserAccess
* rename checkFreeTierBillingUsage to checkInitialCreditsUsage
* better email failure logging